class repo